--- a/SunamoTypes.csproj
+++ b/SunamoTypes.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>Types of .NET classes (will be removed later)</Description>
-    <Version>24.10.15.1</Version>
-    <PackageReleaseNotes>First code</PackageReleaseNotes>
+    <Version>24.11.12.1</Version>
+    <PackageReleaseNotes>Fix empty string for spaces</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
